2008-04-10  Matthew Barnes  <mbarnes@redhat.com>

	* mail-config.glade:
	Revert my previous change.  Glade was more destructive toward the
	file than I realized.  But I think I fixed the core issue that was
	causing Glade 3 to crash: there were two widgets named "omenuCharset".
	Now the one in Composer Preferences is named "omenuCharset1".

2008-04-10  Sankar P  <psankar@novell.com>

	* em-composer-prefs.c: (em_composer_prefs_construct):
	Change the name of the variable we look for in 
	the glade file.

	Also add some if conditions to avoid certain crash.

	** See bug #527327

2008-04-09  Matthew Barnes  <mbarnes@redhat.com>

	* mail-config.glade:
	Loaded this file into Glade 3.5 and saved it.  Doing so appears
	to have fixed whatever corruption was causing previous Glade 3
	releases to choke on it.

2008-04-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #523413

	* em-composer-utils.c (save_draft_done):
	Check the composer window's visibility to determine whether to
	destroy the window.  See the corresponding composer/ChangeLog
	entry to get the full story.

	* em-composer-utils.c (em_utils_composer_save_draft_cb):
	Remove the 'quit' parameter.

2008-04-07  Takao Fujiwara  <takao.fujiwara@sun.com>

	reviewed by: Milan Crha

	** Fix for bug #408579

	* mail.error.xml:
	  Changed '&quot;' to '\"' to work with intltool.

2008-04-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #335891

	* em-composer-prefs.c (em_composer_prefs_construct):
	Desensitize the signature editing interface if the "signatures"
	GConf key is not writable.

2008-04-05  Matthew Barnes  <mbarnes@redhat.com>

	* em-composer-prefs.c:
	Fix a corner case that I missed in my last commit.

2008-04-05  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #526152, plus some tangential code cleanup.

	* Makefile.am:
	Remove all the IDL crud for GnomeSpell.

	* em-composer-prefs.c:
	* evolution-mail.schemas.in:
	* mail-config.c: