@@ -1703,6 +1703,7 @@ static BonoboUIVerb emfb_verbs[] = {
 };
 
 static EPixmap emfb_pixmaps[] = {
+	E_PIXMAP ("/commands/FolderCreate", "folder-new", E_ICON_SIZE_MENU),
 	E_PIXMAP ("/commands/ChangeFolderProperties", "document-properties", E_ICON_SIZE_MENU),
 	E_PIXMAP ("/commands/FolderCopy", "folder-copy", E_ICON_SIZE_MENU),
 	E_PIXMAP ("/commands/FolderMove", "folder-move", E_ICON_SIZE_MENU),
